Make security global, markdown formatting changes
