# nitroApi/swagger.json
@@ -45,12 +45,12 @@
 					"feeds"
 				],
 				"summary": "Start here for programmes metadata: Brands, Series, Episodes and Clips",
-				"operationId": "findProgrammes",
+				"operationId": "listProgrammes",
 				"parameters": [
 					{
 						"name": "sort",
 						"in": "query",
-						"description": "Sorts:  \nsort numerically by position in group, ascending  \nsort alphabetically by PID, descending  \nsort numerically by position, ascending  \nsort by promotion rank, ascending  \nsort chronologically by release date, descending  \nsort by weighting of search term (use with q parameter)  \nsort chronologically by scheduled start time/date, ascending  \nsort alphabetically by title, ascending  \nsort by title librarian style (ignoring leading 'The', 'A', etc), ascending  \nsort by root pid and then preorder tree sort. Requires entities to have release date.  \nsort numerically by number of views (most popular first - faster most_popular)  \n",
+						"description": "Sorts:  \n---\nsort numerically by position in group, ascending  \n---\nsort alphabetically by PID, descending  \n---\nsort numerically by position, ascending  \n---\nsort by promotion rank, ascending  \n---\nsort chronologically by release date, descending  \n---\nsort by weighting of search term (use with q parameter)  \n---\nsort chronologically by scheduled start time/date, ascending  \n---\nsort alphabetically by title, ascending  \n---\nsort by title librarian style (ignoring leading 'The', 'A', etc), ascending  \n---\nsort by root pid and then preorder tree sort. Requires entities to have release date.  \n---\nsort numerically by number of views (most popular first - faster most_popular)  \n",
 						"type": "string",
 						"required": false,
 						"enum": [
@@ -81,7 +81,7 @@
 					{
 						"name": "mixin",
 						"in": "query",
-						"description": "Mixins:  \nmixin to return the alternate images for a programme  \nmixin to return ancestor programme titles  \nmixin to return programme availability information  \nmixin to return information about programmes that are currently available  \nmixin to return information about contributors to a programme  \nmixin to return original version duration in programme concept entities  \nmixin to return list of genre groupings  \nmixin to add image information for a programme  \nmixin to add embeddable information for a programme  \nmixin to return the programmes which appear before and after a programme (as determined by the sort applied in the request)  \nmixin to return information about related links to a programme  \nmixin to return information about programmes that are currently available  \n",
+						"description": "Mixins:  \n---\nmixin to return the alternate images for a programme  \n---\nmixin to return ancestor programme titles  \n---\nmixin to return programme availability information  \n---\nmixin to return information about programmes that are currently available  \n---\nmixin to return information about contributors to a programme  \n---\nmixin to return original version duration in programme concept entities  \n---\nmixin to return list of genre groupings  \n---\nmixin to add image information for a programme  \n---\nmixin to add embeddable information for a programme  \n---\nmixin to return the programmes which appear before and after a programme (as determined by the sort applied in the request)  \n---\nmixin to return information about related links to a programme  \n---\nmixin to return information about programmes that are currently available  \n",
 						"type": "array",
 						"collectionFormat": "multi",
 						"items": {
@@ -481,12 +481,7 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				},
-				"security": [
-					{
-						"api_key": []
-					}
-				]
+				}
 			}
 		},
 		"/availabilities": {
@@ -496,12 +491,12 @@
 					"feeds"
 				],
 				"summary": "Discover details of on-demand availability for programmes and their versions",
-				"operationId": "findAvailability",
+				"operationId": "listAvailability",
 				"parameters": [
 					{
 						"name": "sort",
 						"in": "query",
-						"description": "Sorts:  \nsort chronologically by scheduled start time/date, ascending  \n",
+						"description": "Sorts:  \n---\nsort chronologically by scheduled start time/date, ascending  \n",
 						"type": "string",
 						"required": false,
 						"enum": [
@@ -599,12 +594,7 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				},
-				"security": [
-					{
-						"api_key": []
-					}
-				]
+				}
 			}
 		},
 		"/broadcasts": {
@@ -614,12 +604,12 @@
 					"feeds"
 				],
 				"summary": "Build schedules and find metadata for TV and radio broadcasts",
-				"operationId": "findBroadcasts",
+				"operationId": "listBroadcasts",
 				"parameters": [
 					{
 						"name": "sort",
 						"in": "query",
-						"description": "Sorts:  \nsort chronologically by scheduled start time/date, ascending  \n",
+						"description": "Sorts:  \n---\nsort chronologically by scheduled start time/date, ascending  \n",
 						"type": "string",
 						"required": false,
 						"enum": [
@@ -640,7 +630,7 @@
 					{
 						"name": "mixin",
 						"in": "query",
-						"description": "Mixins:  \nreturn ancestor programme titles  \n",
+						"description": "Mixins:  \n---\nreturn ancestor programme titles  \n",
 						"type": "array",
 						"collectionFormat": "multi",
 						"items": {
@@ -865,12 +855,7 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				},
-				"security": [
-					{
-						"api_key": []
-					}
-				]
+				}
 			}
 		},
 		"/groups": {
@@ -880,12 +865,12 @@
 					"feeds"
 				],
 				"summary": "Find metadata for curated groups: seasons, collections, galleries or franchises",
-				"operationId": "findGroups",
+				"operationId": "listGroups",
 				"parameters": [
 					{
 						"name": "sort",
 						"in": "query",
-						"description": "Sorts:  \nsort alphabetically by PID  \n",
+						"description": "Sorts:  \n---\nsort alphabetically by PID  \n",
 						"type": "string",
 						"required": false,
 						"enum": [
@@ -905,7 +890,7 @@
 					{
 						"name": "mixin",
 						"in": "query",
-						"description": "Mixins:  \nmixin to return the alternate images for a group  \nmixin to return links to programme entities that group belongs to  \nmixin to add image information for a group  \nmixin to return related links for the group  \n",
+						"description": "Mixins:  \n---\nmixin to return the alternate images for a group  \n---\nmixin to return links to programme entities that group belongs to  \n---\nmixin to add image information for a group  \n---\nmixin to return related links for the group  \n",
 						"type": "array",
 						"collectionFormat": "multi",
 						"items": {
@@ -1045,12 +1030,7 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				},
-				"security": [
-					{
-						"api_key": []
-					}
-				]
+				}
 			}
 		},
 		"/images": {
@@ -1060,12 +1040,12 @@
 					"feeds"
 				],
 				"summary": "Find metadata for images",
-				"operationId": "findImages",
+				"operationId": "listImages",
 				"parameters": [
 					{
 						"name": "sort",
 						"in": "query",
-						"description": "Sorts:  \nsort numerically by position, ascending only  \nsort alphabetically by PID  \n",
+						"description": "Sorts:  \n---\nsort numerically by position, ascending only  \n---\nsort alphabetically by PID  \n",
 						"type": "string",
 						"required": false,
 						"enum": [
@@ -1202,12 +1182,7 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				},
-				"security": [
-					{
-						"api_key": []
-					}
-				]
+				}
 			}
 		},
 		"/items": {
@@ -1217,12 +1192,12 @@
 					"feeds"
 				],
 				"summary": "Look inside programmes to find segments: chapters, tracks and more",
-				"operationId": "findItems",
+				"operationId": "listItems",
 				"parameters": [
 					{
 						"name": "sort",
 						"in": "query",
-						"description": "Sorts:  \nsort by pid, descending  \n",
+						"description": "Sorts:  \n---\nsort by pid, descending  \n",
 						"type": "string",
 						"required": false,
 						"enum": [
@@ -1242,7 +1217,7 @@
 					{
 						"name": "mixin",
 						"in": "query",
-						"description": "Mixins:  \nmixin to return information about contributors to items  \nmixin to add image information for an item  \nmixin to return programme segment events, works in conjunction with programme or segment_event filters  \n",
+						"description": "Mixins:  \n---\nmixin to return information about contributors to items  \n---\nmixin to add image information for an item  \n---\nmixin to return programme segment events, works in conjunction with programme or segment_event filters  \n",
 						"type": "array",
 						"collectionFormat": "multi",
 						"items": {
@@ -1394,12 +1369,7 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				},
-				"security": [
-					{
-						"api_key": []
-					}
-				]
+				}
 			}
 		},
 		"/master_brands": {
@@ -1409,12 +1379,12 @@
 					"feeds"
 				],
 				"summary": "List all Master Brands",
-				"operationId": "findMasterbrands",
+				"operationId": "listMasterbrands",
 				"parameters": [
 					{
 						"name": "sort",
 						"in": "query",
-						"description": "Sorts:  \nsort by mid, ascending  \n",
+						"description": "Sorts:  \n---\nsort by mid, ascending  \n",
 						"type": "string",
 						"required": false,
 						"enum": [
@@ -1434,7 +1404,7 @@
 					{
 						"name": "mixin",
 						"in": "query",
-						"description": "Mixins:  \nmixin to add image information for a masterbrand  \n",
+						"description": "Mixins:  \n---\nmixin to add image information for a masterbrand  \n",
 						"type": "array",
 						"collectionFormat": "multi",
 						"items": {
@@ -1516,12 +1486,7 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				},
-				"security": [
-					{
-						"api_key": []
-					}
-				]
+				}
 			}
 		},
 		"/people": {
@@ -1531,7 +1496,7 @@
 					"feeds"
 				],
 				"summary": "Find the people behind and in programmes: cast, crew, guests and more",
-				"operationId": "findPeople",
+				"operationId": "listPeople",
 				"parameters": [
 					{
 						"name": "authority",
@@ -1653,12 +1618,7 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				},
-				"security": [
-					{
-						"api_key": []
-					}
-				]
+				}
 			}
 		},
 		"/pips": {
@@ -1668,7 +1628,7 @@
 					"feeds"
 				],
 				"summary": "Look inside pips entities",
-				"operationId": "findPips",
+				"operationId": "listPips",
 				"parameters": [
 					{
 						"name": "page",
@@ -1703,12 +1663,7 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				},
-				"security": [
-					{
-						"api_key": []
-					}
-				]
+				}
 			}
 		},
 		"/promotions": {
@@ -1718,12 +1673,12 @@
 					"feeds"
 				],
 				"summary": "Discover metadata for content promotions",
-				"operationId": "findPromotions",
+				"operationId": "listPromotions",
 				"parameters": [
 					{
 						"name": "mixin",
 						"in": "query",
-						"description": "Mixins:  \nmixin to return information about related links to a promotion  \n",
+						"description": "Mixins:  \n---\nmixin to return information about related links to a promotion  \n",
 						"type": "array",
 						"collectionFormat": "multi",
 						"items": {
@@ -1852,12 +1807,7 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				},
-				"security": [
-					{
-						"api_key": []
-					}
-				]
+				}
 			}
 		},
 		"/schedules": {
@@ -1867,12 +1817,12 @@
 					"feeds"
 				],
 				"summary": "Build schedules and find metadata for TV and radio broadcasts and webcasts",
-				"operationId": "findSchedules",
+				"operationId": "listSchedules",
 				"parameters": [
 					{
 						"name": "sort",
 						"in": "query",
-						"description": "Sorts:  \nsort chronologically by scheduled start time/date, ascending  \n",
+						"description": "Sorts:  \n---\nsort chronologically by scheduled start time/date, ascending  \n",
 						"type": "string",
 						"required": false,
 						"enum": [
@@ -1893,7 +1843,7 @@
 					{
 						"name": "mixin",
 						"in": "query",
-						"description": "Mixins:  \nreturn ancestor programme titles  \nmixin to add image information for broadcasts and webcasts  \n",
+						"description": "Mixins:  \n---\nreturn ancestor programme titles  \n---\nmixin to add image information for broadcasts and webcasts  \n",
 						"type": "array",
 						"collectionFormat": "multi",
 						"items": {
@@ -2173,12 +2123,7 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				},
-				"security": [
-					{
-						"api_key": []
-					}
-				]
+				}
 			}
 		},
 		"/services": {
@@ -2188,7 +2133,7 @@
 					"feeds"
 				],
 				"summary": "Information about the linear services used for broadcast transmissions",
-				"operationId": "findServices",
+				"operationId": "listServices",
 				"parameters": [
 					{
 						"name": "end_from",
@@ -2322,12 +2267,7 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				},
-				"security": [
-					{
-						"api_key": []
-					}
-				]
+				}
 			}
 		},
 		"/versions": {
@@ -2337,7 +2277,7 @@
 					"feeds"
 				],
 				"summary": "Metadata on editorial programme versions: original, signed, audio-described, etc",
-				"operationId": "findVersions",
+				"operationId": "listVersions",
 				"parameters": [
 					{
 						"name": "availability",
@@ -2443,12 +2383,7 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				},
-				"security": [
-					{
-						"api_key": []
-					}
-				]
+				}
 			}
 		},
 		"/": {
@@ -2467,12 +2402,7 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				},
-				"security": [
-					{
-						"api_key": []
-					}
-				]
+				}
 			}
 		},
 		"/schema": {
@@ -2491,12 +2421,7 @@
 					"default": {
 						"description": "Unexpected error"
 					}
-				},
-				"security": [
-					{
-						"api_key": []
-					}
-				]
+				}
 			}
 		}
 	},
@@ -2506,5 +2431,10 @@
 			"name": "api_key",
 			"in": "query"
 		}
-	}
+	},
+	"security": [
+		{
+			"api_key": []
+		}
+	]
 }
